--- a/lib/css/jquery.tiny-lightbox.css
+++ b/lib/css/jquery.tiny-lightbox.css
@@ -1,4 +1,4 @@
-div#tiny-lightbox {
+#tiny-lightbox {
 	position: absolute;
 	z-index: 100000;
 	width: 100%;
@@ -6,10 +6,10 @@ div#tiny-lightbox {
 	top: 0;
 	left: 0;
 }
-div#tiny-lightbox a {
+#tiny-lightbox a {
 	outline: none;
 }
-div#tiny-lightbox-overlay {
+#tiny-lightbox-overlay {
 	position: absolute;
 	z-index: 0;
     left: 0;
@@ -20,7 +20,7 @@ div#tiny-lightbox-overlay {
 	display: none;
 	padding-bottom: 40px;
 }
-div#tiny-lightbox-box {
+#tiny-lightbox-box {
 	position: absolute;
 	z-index: 1;
 	width: 200px;
@@ -30,15 +30,15 @@ div#tiny-lightbox-box {
 	border: 10px solid #fff;
 	visibility: hidden;
 }
-div#tiny-lightbox.tiny-lightbox-loading div#tiny-lightbox-box {
+#tiny-lightbox.tiny-lightbox-loading #tiny-lightbox-box {
 	background: url(../img/loading.gif) no-repeat center #fff;
 }
 
-div#tiny-lightbox.tiny-lightbox-animating div#tiny-lightbox-box a, 
-div#tiny-lightbox.tiny-lightbox-loading div#tiny-lightbox-box a {
+#tiny-lightbox.tiny-lightbox-animating #tiny-lightbox-box a,
+#tiny-lightbox.tiny-lightbox-loading #tiny-lightbox-box a {
 	display: none;
 }
-div#tiny-lightbox-image {
+#tiny-lightbox-image {
 	width: 100%;
 	height: 100%;
 	background-repeat: no-repeat;
@@ -46,7 +46,7 @@ div#tiny-lightbox-image {
 	background-color: #fff;
 	display: none;
 }
-div#tiny-lightbox-bar {
+#tiny-lightbox-bar {
 	position: absolute;
 	display: none;
 	background: #fff;
@@ -55,28 +55,28 @@ div#tiny-lightbox-bar {
 	font-size: 11px;
 	line-height: 16px;
     text-align: left;
-	color: #666;	
+	color: #666;
 }
 
-a#tiny-lightbox-close,
-a#tiny-lightbox-slideshow {
+#tiny-lightbox-close,
+#tiny-lightbox-slideshow {
     float: right;
-	width: 26px;	
+	width: 26px;
 	height: 26px;
 }
-a#tiny-lightbox-close {
+#tiny-lightbox-close {
 	background: url(../img/close.gif) no-repeat;
 }
-a#tiny-lightbox-slideshow {
+#tiny-lightbox-slideshow {
 	background: url(../img/play-pause.gif)  no-repeat;
 }
-div.tiny-lightbox-slideshow-running a#tiny-lightbox-slideshow {
-	background-position: -26px 0;		
+.tiny-lightbox-slideshow-running #tiny-lightbox-slideshow {
+	background-position: -26px 0;
 }
-div#tiny-lightbox-description {
+#tiny-lightbox-description {
     margin-bottom: 10px;
 }
-span#tiny-lightbox-stats {
+#tiny-lightbox-stats {
 	float: left;
 	font-weight: bold;
 }
@@ -85,22 +85,22 @@ span#tiny-lightbox-stats {
 
 /* prev and next buttons */
 
-a#tiny-lightbox-prev, a#tiny-lightbox-next {
+#tiny-lightbox-prev, #tiny-lightbox-next {
 	position: absolute;
 	z-index: 1000;
 	width: 50%;
 	height: 100%;
 	top: 0;
 }
-a#tiny-lightbox-prev {
+#tiny-lightbox-prev {
 	left: 0;
 }
-a#tiny-lightbox-next {
+#tiny-lightbox-next {
 	right: 0;
 }
 
-a#tiny-lightbox-prev span, 
-a#tiny-lightbox-next span {
+#tiny-lightbox-prev span,
+#tiny-lightbox-next span {
 	position: absolute;
 	width: 81px;
 	height: 48px;
@@ -108,29 +108,29 @@ a#tiny-lightbox-next span {
 	visibility: hidden;
 }
 
-a#tiny-lightbox-prev span {
+#tiny-lightbox-prev span {
 	left: 0;
 	background: url(../img/prev.png) no-repeat;
 	filter:progid:DXImageTransform.Microsoft#AlphaImageLoader(src='../img/prev.png', sizingMethod='crop');
 	_background: none;
 }
-a#tiny-lightbox-next span {
+#tiny-lightbox-next span {
 	right: 0;
 	background: url(../img/next.png) no-repeat;
 	filter:progid:DXImageTransform.Microsoft#AlphaImageLoader(src='../img/next.png', sizingMethod='crop');
 	_background: none;
 }
 
-a#tiny-lightbox-prev span.tiny-lightbox-hover,
-a#tiny-lightbox-next span.tiny-lightbox-hover {
+#tiny-lightbox-prev span.tiny-lightbox-hover,
+#tiny-lightbox-next span.tiny-lightbox-hover {
 	visibility: visible;
 }
 
-/* 
+/*
 	IE6 background image flicker fix
-	http://evil#che#lu/2006/9/25/no-more-ie6-background-flicker 
+	http://evil#che#lu/2006/9/25/no-more-ie6-background-flicker
 */
 html {
-  filter: expression(document.execCommand("BackgroundImageCache", false, true));
+	filter: expression(document.execCommand("BackgroundImageCache", false, true));
 }
 
